<resources>
    <string name="app_name">ChatApp</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="signup_failed">Signup Failed: %1$s</string>
    <string name="donthave_account">Don\'t have account ?</string>
    <string name="failed_to_update_profile">Failed to update profile : %1$s</string>
    <string name="permission_required">Access permission is required</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_successfully">Profile photo is removed successfully</string>
    <string name="failed_to_remove_photo">Failed to remove photo : %1$s</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="reset_password_instructions">Reset Password instructions has been sent on email : %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="email_sent_failed">Failed to send email : %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="loading">Please wait...</string>
    <string name="no_internet">Check Internet Connection</string>
    <string name="chat">Chat</string>
    <string name="request">Request</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Chat list will apear here</string>
    <string name="empty_friends_list">Friends will apear here</string>
    <string name="empty_request_list">Friend request will apear here</string>
    <string name="requests">Requests</string>
    <string name="empty_requests_list">Friend requests will apear here</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends: %1$s</string>
    <string name="failed_to_fetch_friend_name">Failed to fetch friend name: %1$s</string>
    <string name="failed_to_notify_friends">Failed to notify friends: %1$s</string>
    <string name="request_sent_successfully">Request sent successfully</string>
    <string name="failed_to_send_request">Failed to send friend request : %1$s</string>
    <string name="request_cancelled_successfully">Request Cancelled Successfully</string>
    <string name="failed_to_cancel_request">Failed To Cancel Request</string>
    <string name="failed_to_cancel_request2">Failed To Cancel Request</string>
    <string name="failed_to_cancel_request3">Failed To Cancel Request: %1$s</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="failed_to_fetch_friend_requests">Failed to fetch friend requests %1$s</string>
    <string name="failed_to_deny_request">Failed to deny request: %1$s</string>
    <string name="request_denied_successfully">Request denied successfully</string>
    <string name="failed_to_accept_request">Failed to accept request: %1$s</string>
    <string name="failed_to_fetch_chat_list">Failed to fetch chat list : %1$s</string>
    <string name="your_email">Your Email</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_to_send_message">Failed to send Message : %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="download_progress">Downloading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to upload : %1$s</string>
    <string name="app_logo">appLogo</string>
    <string name="failed_to_delete_old_image">Failed to delete old image</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="failed_to_delete_message">Failed to delete message: %1$s</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file: %1$s</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="file_downloaded_successfully">File Downloaded Successfully</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download file : %1$s</string>
    <string name="share_with">Share with. . .</string>
    <string name="failed_to_save_device_token">Failed to save device token : $1%s</string>
    <string name="failed_to_get_token">Failed to get token : %1$s</string>
    <string name="failed_to_send_notification">Failed to send notification : %1$s</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="deleted_message_text">This message was deleted</string>
    <string name="failed_to_clear_message">Failed to clear message: %1$s</string>
    <string name="delete_friend">DELETE</string>
    <string name="failed_to_delete_friend">Failed to delete a friend: %1$s</string>
</resources>